--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
-vendor/
-node_modules/
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
 
-# Laravel 5 & Lumen specific
-bootstrap/cache/
-storage/
-.env.*.php
-.env.php
-.env
-.env.example
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
